# ROSSpy

./: .gitignore  2021-04-26_command-line PHREEQC_12.ipynb  2021-04-30_PHREEQC_1.py  2021-08-22_ROSS_1.ipynb  Dockerfile  LICENSE  README.md  README.rst  ROSS_command_line.py  ROSS_command_line_1.ipynb  processing_databases-brainstorming.py  processing_databases.py  requirements.txt  setup.py
binder/: postBuild  (+1 more)
rosspy/: README_pypi.md  __init__.py  core.py  processing_databases.py  ro.py  ro_module.json  setup.cfg
rosspy/databases/: core10.json
rosspy/processed_databases/: Amm.json  ColdChem.json  Tipping_Hurley.json  core10.json  frezchem.json  iso.json  llnl.json  minteq.json  minteq.v4.json  phreeqc.json  pitzer.json  sit.json  wateq4f.json
rosspy/test/: 2020-09-03_APF_Palo Duro Basin-BW30-400_PE=100%_1.1.pqi  test_core.py  test_ro.py  test_ro_unix.py
rosspy/test/2021-10-19_ROSS_michigan_basin_transport_pitzer_brine_all_distance_LinPerm_0/: brine_concentrations.csv  parameters.csv  selected_output.pqo
rosspy/test/2021-10-19_ROSS_michigan_basin_transport_pitzer_brine_all_time_LinPerm_0/: variables.csv
rosspy/test/2021-10-19_ROSS_michigan_basin_transport_pitzer_scaling_all_distance_LinPerm_0/: input.pqi  scaling_data.csv
rosspy/test/2021-10-19_ROSS_michigan_basin_transport_pitzer_scaling_all_time_LinPerm_0/: scaling_data.csv  variables.csv
rosspy/water_bodies/: bakken_formation.json  marcellus_appalachian_basin.json  mediterranean_sea.json  michigan_basin.json  north_german_basin.json  palo_duro_basin.json  red_sea.json  western_pennsylvania_basin.json
(+2783 files in other folders)
