[metadata]
name = ROSS
version = 0.0.1
author = Andrew Freiburger
author_email = andrewfreiburger@gmail.com
description = A reverse osmosis scaling simulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/freiburgermsu/ROSS
project_urls =
    Bug Tracker = https://github.com/freiburgermsu/ROSS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src